# ERL-assignment2-ROS-PLANNING-AND-SLAM

./: CMakeLists.txt  README.md  docker-compose.yaml  env-setup.sh  package.xml
autonomous-planner/: CMakeLists.txt  package.xml
autonomous-planner/PDDL/: domain.pddl  problem.pddl  problemCMD
autonomous-planner/launch/: patrol_example_launch.py  paunch_launch.py  start_robot_slam_and_nav.launch.py
autonomous-planner/params/: nav2_params.yaml
autonomous-planner/src/: move_action_node.cpp  patrolling_controller_node.cpp  scan_action_node.py  scan_marker_action_node.cpp
autonomous-planner/srv/: GetLastMarker.srv
autonomous_planner/: CMakeLists.txt  package.xml
autonomous_planner/configs/: mymap.data  mymap.pgm  mymap.yaml
autonomous_planner/launch/: assignement2_launch.py  patrol_example_fakesim_launch.py  paunch_launch.py  start_robot_slam_and_nav.launch.py
autonomous_planner/params/: mapper_params_online_sync.yaml  nav2_params.yaml
autonomous_planner/pddl/: patrol.pddl  rosbot.pddl
autonomous_planner/src/: controller_node.cpp  move_action_node.cpp  patrolling_controller_node.cpp  scan_marker_action_node.cpp
autonomous_planner_interfaces/: CMakeLists.txt  package.xml
autonomous_planner_interfaces/srv/: GetLastMarker.srv
params/: mapper_params_online_sync.yaml
robot_urdf/config/: camera_config.yaml  rviz_slam_cam_aruco.rviz
robot_urdf/launch/: gazebo2.launch.py  rosbot.launch.py
robot_urdf/urdf/: robot6.gazebo  robot6.xacro  rosbot.gazebo  rosbot.xacro
robot_urdf/urdf/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
robot_urdf/urdf/log/: latest_build
